DevConfSkopje.Web/Content/main.css
/* ... */
body {
  background-color: white; }

::selection {
  background: #FF8C8C;
  color: white;
  text-shadow: none; }

.Site {
  display: flex;
  min-height: 100vh;
  flex-direction: column; }

.Site-content {
  flex: 1; }

section {
  padding-left: 8%;
  padding-right: 8%; }

.poster_bg {
  background: url(images/devcon_poster.jpg);
  background-position: center;
  background-size: cover;
  height: 140vh; }

nav {
  margin-bottom: 8%; }

.topnav {
  display: flex;
  justify-content: space-around; }

.logo {
  background-image: url(images/logo.svg);
  background-repeat: no-repeat;
  height: 5.6em;
  width: 8.8em;
  margin-top: 3em;
  float: left;
  cursor: pointer; }

.logo_blck {
    background-image: url(images/logo_blck.svg);
    background-repeat: no-repeat;
    height: 5.6em;
    width: 8.8em;
    margin-top: 3em;
    float: left;
    cursor: pointer;
}

nav ul {
  list-style: none;
  margin-top: 4em; }

nav ul li a {
  font-family: aktiv-grotesk, sans-serif;
  font-weight: 700;
  font-size: 2.1em;
  color: #FCFCFC;
  text-decoration: none; }

nav ul li a:hover {
  color: #FF8C8C;
  padding-bottom: 0.2em;
  border-bottom: 0.2em solid;
  text-decoration: none; }

nav li.current a {
  padding-bottom: 0.2em;
  border-bottom: 0.2em solid;
  text-decoration: none; }

.devconlogo {
  display: flex;
  margin: 0 auto 0 auto;
  height: 14em;
  width: 18em; }

.ctabutton {
  font-family: aktiv-grotesk, sans-serif;
  font-weight: 400;
  font-size: 2.1em;
  box-sizing: border-box;
  color: #FCFCFC;
  text-decoration: none;
  cursor: pointer;
  max-width: 270px;
  padding: 1.8rem 2.1rem;
  border: none;
  background-color: #f20000;
  display: block;
  margin: 0 auto;
  text-align: center;
  -webkit-box-shadow: 0px 12px 21px -6px rgba(0, 38, 49, 0.8);
  -moz-box-shadow: 0px 12px 21px -6px rgba(0, 38, 49, 0.8);
  box-shadow: 0px 12px 21px -6px rgba(0, 38, 49, 0.8);
  transition: all 300ms ease-in-out; }

.ctabutton:hover {
  background-color: #ff2626; }

.footerlogo {
  background-image: url(images/logo_blck.png);
  background-repeat: no-repeat;
  height: 4.5em;
  width: 8em;
  cursor: pointer;
  display: block;
  margin: 0 auto; }

footer {
  margin-top: 6%; }

.footer_navigation ul {
  list-style: none;
  display: flex;
  justify-content: space-around; }

.footer_navigation ul {
  padding: 0;
  margin-top: 3.6em; }

.footer_navigation ul li a {
  font-family: aktiv-grotesk, sans-serif;
  font-weight: 700;
  font-size: 1.8em;
  color: #002026;
  text-decoration: none; }

.footer_navigation ul li a:hover {
  color: #FF8C8C;
  text-decoration: none;
  padding-top: 0.2em;
  border-top: 0.2em solid; }

.footer_navigation li.current a {
  color: #002026;
  padding-top: 0.2em;
  border-top: 0.2em solid;
  text-decoration: none; }

.footer__links_wrapper {
  display: flex;
  justify-content: space-around; }

ul.footer__link_list {
  list-style: none;
  padding-left: 0;
  margin-top: 0.6em; }

.footer__link_list li a {
  font-family: aktiv-grotesk, sans-serif;
  font-weight: 500;
  font-size: 1.4em;
  line-height: 160%;
  color: #FF8C8C;
  text-decoration: none; }

.lnklistspace {
  margin-right: 1.4em; }

.footer__link_list li a:hover {
  border-bottom: 1px solid #FF8C8C; }

ul.logos {
  padding-left: 0;
  list-style: none;
  margin-top: 9em; }

ul.logos li {
  margin-right: 5em; }

ul.logos li:last-child {
  margin-right: 0; }

.logos li > img {
  max-height: 90px;
  margin: 0 auto 4.8em auto; }

ul.speakers {
  padding-left: 0;
  list-style: none; }

ul.speakers li {
  margin-bottom: 9em; }

ul.speakers p {
  margin-bottom: 1em; }

.spacing {
  margin-top: 2.1em; }

.speakerimg {
  box-sizing: border-box; }

.left {
  border-left: 3.6em solid #FF8C8C; }

.right {
  border-right: 3.6em solid #028BD2;
  float: right; }

.rightphone {
  border-right: 3.6em solid #028BD2; }

.bio {
  margin: 0 auto;
  max-width: 60em; }

ul.qa {
  list-style: none;
  padding: 0;
  margin-top: 0; }

ul.qa li {
  margin-bottom: 6em; }

ul.qa li > h3, p {
  margin-top: 0; }

ul.program {
  list-style: none;
  margin: 0 auto 0 auto; }

ul.program li {
  margin-bottom: 4.8em; }

ul.program li > h3, p {
  margin: 0; }

ul.program li a {
  display: inline-block;
  color: #FF8C8C;
  font-family: courier-prime, monospace;
  font-weight: 400;
  font-style: normal;
  font-size: 1.8em;
  text-decoration: none; }

ul.program li a:hover {
  text-decoration: underline; }

ul.contact__link_list {
  list-style: none;
  padding: 0;
  margin: 0 auto 0 auto;
  margin-bottom: 3.6em; }

.contact__link_list a {
  font-family: aktiv-grotesk, sans-serif;
  font-weight: 500;
  font-size: 1.8em;
  line-height: 160%;
  color: #FF8C8C;
  text-decoration: none; }

.contact__link_list a:hover {
  border-bottom: 1px solid #FF8C8C; }

.faq_links {
  position: fixed;
  right: 10%;
  max-width: 20em; }

ul.faq__link_list {
  padding: 0;
  margin: 0 auto 0 auto;
  margin-bottom: 3.6em; }

.faq__link_list a {
  font-family: aktiv-grotesk, sans-serif;
  font-weight: 500;
  font-size: 1.4em;
  line-height: 160%;
  color: #FF8C8C;
  text-decoration: none; }

.faq__link_list a:hover {
  border-bottom: 1px solid #FF8C8C; }

ul.faq__link_list li > h4 {
  margin-top: 0;
  margin-bottom: .6em; }

h1 {
  font-family: aktiv-grotesk, sans-serif;
  font-weight: 700;
  font-variant: normal;
  font-size: 7.2em;
  line-height: 125%;
  text-align: center;
  color: #002026;
  margin-top: 1em;
  margin-bottom: .5em; }

h2 {
  font-family: courier-prime, monospace;
  font-weight: 400;
  font-style: normal;
  font-size: 2.8em;
  line-height: 125%;
  margin-top: 1.2em;
  margin-bottom: 1em;
  color: #002026; }

h3 {
  font-family: aktiv-grotesk, sans-serif;
  font-weight: 700;
  font-variant: normal;
  font-size: 2.8em;
  line-height: 125%;
  margin-top: 1.2em;
  margin-bottom: 1em;
  color: #002026; }
/* ... */

